# kinconnect

./: .gitignore  pyproject.toml
data/processed/: matches_David_Johnson__Fake_Profile__20240702_170146_parquet  matches_Nehil_Jain__TEST__20240703_154050.parquetx  matches_Nehil_Jain__TEST__20240703_154226.parquetx  matches_Nehil_Jain__TEST__20240703_155418.parquet  matches_Nehil_Jain__TEST__20240703_160400.parquet  matches_Nehil_Jain__TEST__20240703_160459.parquet  matches_Nehil_Jain__TEST__20240703_160619.parquet  matches_Nikhil_Agarwal__Fake_Profile__20240703_073432.parquetx  matches_Nikhil_Agarwal__Fake_Profile__20240703_073459.parquetx  processed_profiles_20240702072529.pkl  processed_profiles_20240702112805.parquet  processed_profiles_20240702112805.pkl  processed_profiles_20240702115056.parquet  processed_profiles_20240702115056.pkl  processed_profiles_20240702115616.parquet  processed_profiles_20240702115616.pkl  processed_profiles_20240702123828.parquet  processed_profiles_20240702123828.pkl  processed_profiles_20240703141544.parquet  processed_profiles_20240703141544.pkl  processed_profiles_20240703155312.parquet  processed_profiles_20240703155312.pkl  processed_profiles_20240705124308.parquet  processed_profiles_20240705124308.pkl  synth_data_20240702115005.pkl  (+5 more)
kinconnect-frontend/: package-lock.json  package.json
kinconnect_api/: .gitignore  Makefile  README.md  __init__.py  api.py  db.py  embedding_data_pipeline.py  llm_utils.py  match.py  pyproject.toml  synthetic_data_generation_pipeline.py
kinconnect_api/docs/: mkdocs.yml
kinconnect_api/docs/docs/: index.md
kinconnect_api/kinconnect_api/: api.py  config.py  dataset.py  db.py  features.py  plots.py
kinconnect_api/kinconnect_api/modeling/: predict.py  train.py
kinconnect_api/notebooks/: chunking_to_mongo.ipynb  create_synthetic_profiles.ipynb  test_mongo.ipynb
kinconnect_api/prompts/: prompt_extract_career_firefunc.txt  prompt_extract_portfolio.txt  prompt_rewrite_query.txt  promptfoo_call_fireworks_api_query_rewriter.py  promptfooconfig.yaml
kinconnect_api/search/: config.py  recommondation.py  search.py
kinconnect_api/util/: collections.py
notebooks/: create_synthetic_profiles.ipynb  ingest_embeddings.ipynb  playground.ipynb
prompts/: prompt_extract_career.txt  prompt_extract_career_firefunc.txt  prompt_extract_proile_attributes.txt  promptfoo_call_fireworks_api.py  promptfoo_call_fireworks_api_portofio.py  promptfoo_call_fireworks_api_profile_attributes.py  test_rewrite_contexts.csv
(+21 files in other folders)
