[tool.poetry]
name = "kinconnect-api"
version = "0.1.0"
description = ""
authors = ["Nehil Jain"]
readme = "README.md"

packages = [
    { include = "kinconnect_api" }
]

[tool.poetry.dependencies]
python = "^3.11"
instructor = "^1.3.2"
openai = "^1.30.5"
jupyterlab = "^4.2.1"
ipykernel = "^6.29.4"
ipdb = "^0.13.13"
typer = "^0.12.3"
pydantic = "^2.7.3"
langsmith = "^0.1.67"
requests-cache = "^1.2.0"
thefuzz = "^0.22.1"
pandas = "^2.2.2"
groq = "^0.8.0"
requests = "^2.32.3"
langserve = "^0.2.1"
langchain = {extras = ["all"], version = "^0.2.2"}
langchain-core = "^0.2.4"
langchain-community = "^0.2.2"
langchain-openai = "^0.1.8"
langchain-groq = "^0.1.5"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
plotly-express = "^0.4.1"
dash = "^2.17.0"
streamlit = "^1.35.0"
langchain-mongodb = "^0.1.6"
pymongo = "^4.7.3"
pypdf = "^4.2.0"
langchain-fireworks = "^0.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["kinconnect_api"]
force_sort_within_sections = true
